--- a/src/components/MovieReviews/MovieReviews.module.css
+++ b/src/components/MovieReviews/MovieReviews.module.css
@@ -23,6 +23,7 @@
 	border-radius: 5px;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 	transition: transform 0.2s ease;
+	list-style-type: none;
 }
 
 .reviews li:hover {
